# findit-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
assets/: main.css
src/: admin_api.rs  api.rs  app.rs  auth.rs  cache.rs  config.rs  db.rs  main.rs  models.rs
src/components/: admin.rs  category_list.rs  footer.rs  header.rs  home.rs  mod.rs  service_card.rs
src/pages/: admin.rs  home.rs  mod.rs  not_found.rs
src/server/: admin.rs  auth.rs  config.rs  db.rs  mod.rs  server_functions.rs  services.rs
