[package]
name = "find-it"
version = "0.1.0"
authors = ["Felix Bjerhem Aronsson <felix.b.aronsson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1.0.228", features = ["derive"] }
web-sys = { version = "0.3.70", features = ["Window", "Location", "File", "FileReader", "FileList", "HtmlInputElement", "Blob"] }
base64 = "0.22"
url = "2.5"
dotenvy = "0.15.7"
envy = "0.4.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bollard = "0.20"
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.6", features = ["fs"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
